--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Timetable control for angular applications",
   "main": "index.js",
+  "typings": "./index.d.ts",
   "scripts": {
+    "prepublish": "tsc",
     "test": "karma start karma.conf.js"
   },
   "repository": {
@@ -20,5 +22,34 @@
   "bugs": {
     "url": "https://github.com/coorter/ng-timetable/issues"
   },
-  "homepage": "https://github.com/coorter/ng-timetable#readme"
+  "homepage": "https://github.com/coorter/ng-timetable#readme",
+  "dependencies": {
+    "@angular/animations": "^4.1.3",
+    "@angular/common": "^4.1.3",
+    "@angular/compiler": "^4.1.3",
+    "@angular/compiler-cli": "^4.1.3",
+    "@angular/core": "^4.1.3",
+    "@angular/forms": "^4.1.3",
+    "@angular/http": "^4.1.3",
+    "@angular/platform-browser": "^4.1.3",
+    "@angular/platform-browser-dynamic": "^4.1.3",
+    "@angular/platform-server": "^4.1.3",
+    "@angular/router": "^4.1.3"
+  },
+  "devDependencies": {
+    "@angular/animations": "^4.1.3",
+    "@angular/common": "^4.1.3",
+    "@angular/compiler": "^4.1.3",
+    "@angular/compiler-cli": "^4.1.3",
+    "@angular/core": "^4.1.3",
+    "@angular/forms": "^4.1.3",
+    "@angular/http": "^4.1.3",
+    "@angular/platform-browser": "^4.1.3",
+    "@angular/platform-browser-dynamic": "^4.1.3",
+    "@angular/platform-server": "^4.1.3",
+    "@angular/router": "^4.1.3",
+    "rxjs": "^5.4.0",
+    "typescript": "^2.3.3",
+    "zone.js": "^0.8.11"
+  }
 }
